--- a/Demo/app/build.gradle
+++ b/Demo/app/build.gradle
@@ -41,5 +41,5 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    api(name: "android-database-sqlcipher-4.1.3", ext: 'aar')
+    api(name: "android-database-sqlcipher-4.2.0-release", ext: 'aar')
 }
