--- a/android-database-sqlcipher/android-database-sqlcipher/native.gradle
+++ b/android-database-sqlcipher/android-database-sqlcipher/native.gradle
@@ -1,20 +1,27 @@
-task buildOpenSSL () {
+import org.gradle.internal.logging.text.StyledTextOutputFactory
+import static org.gradle.internal.logging.text.StyledTextOutput.Style
+
+task buildOpenSSL() {
   onlyIf {
     def armNativeFile = new File("${androidNativeRootDir}/armeabi/libcrypto.a")
+    if (armNativeFile.exists()) {
+      def out = services.get(StyledTextOutputFactory).create("")
+      out.style(Style.Normal).text("${androidNativeRootDir}/armeabi/libcrypto.a exists").style(Style.Info).println(' SKIPPED')
+    }
     return !armNativeFile.exists()
   }
   doLast {
     exec {
       workingDir "${projectDir}"
       commandLine "./build-openssl-libraries.sh",
-      "${minimumAndroidSdkVersion}",
-      "${minimumAndroid64BitSdkVersion}",
-      "${opensslVersion}"
+        "${minimumAndroidSdkVersion}",
+        "${minimumAndroid64BitSdkVersion}",
+        "${opensslVersion}"
     }
   }
 }
 
-task buildAmalgamation () {
+task buildAmalgamation() {
   onlyIf {
     def amalgamation = new File("${projectDir}/src/main/external/sqlcipher/sqlite3.c")
     return !amalgamation.exists()
@@ -28,7 +35,7 @@ task buildAmalgamation () {
     exec {
       workingDir "${projectDir}/src/main/external/sqlcipher"
       environment("CFLAGS", "${sqlcipherCFlags}")
-      commandLine "make",  "sqlite3.c"
+      commandLine "make", "sqlite3.c"
     }
   }
 }
@@ -40,14 +47,14 @@ task buildNative() {
       "${nativeRootOutputDir}/libs32",
       file("src/main/cpp").absolutePath,
       file("src/main/cpp/Application32.mk").absolutePath,
-            "${sqlcipherCFlags}", "${otherSqlcipherCFlags}",
-            "${minimumAndroidSdkVersion}")
+      "${sqlcipherCFlags}", "${otherSqlcipherCFlags}",
+      "${minimumAndroidSdkVersion}")
     executeNdkBuild(
       "${nativeRootOutputDir}/libs64",
       file("src/main/cpp").absolutePath,
       file("src/main/cpp/Application64.mk").absolutePath,
-            "${sqlcipherCFlags}", "${otherSqlcipherCFlags}",
-            "${minimumAndroid64BitSdkVersion}")
+      "${sqlcipherCFlags}", "${otherSqlcipherCFlags}",
+      "${minimumAndroid64BitSdkVersion}")
     exec {
       workingDir "${nativeRootOutputDir}"
       commandLine "mkdir", "-p", "libs"
@@ -66,7 +73,7 @@ task cleanOpenSSL() {
   doLast {
     logger.info "Cleaning OpenSSL source"
     File file = new File("${opensslDir}")
-    if(file.exists()){
+    if (file.exists()) {
       file.deleteDir()
     }
   }
@@ -79,8 +86,8 @@ task cleanSQLCipher() {
     gitClean("${sqlcipherDir}")
     File amalgamationSource = new File("${sqlcipherDir}/sqlite3.c")
     File amalgamationHeader = new File("${sqlcipherDir}/sqlite3.h")
-    if(amalgamationSource.exists()) amalgamationSource.delete()
-    if(amalgamationHeader.exists()) amalgamationHeader.delete()
+    if (amalgamationSource.exists()) amalgamationSource.delete()
+    if (amalgamationHeader.exists()) amalgamationHeader.delete()
   }
 }
 
@@ -90,7 +97,7 @@ task cleanNative() {
     logger.info "Cleaning native build artifacts"
     ["libs", "libs32", "libs64", "obj"].each {
       File file = new File("${projectDir}/src/main/${it}")
-      if(file.exists()){
+      if (file.exists()) {
         file.deleteDir()
       }
     }
@@ -119,18 +126,27 @@ def gitClean(directory) {
 def executeNdkBuild(outputDir, androidMkDirectory, applicationMkFile,
                     cflags, otherSqlcipherCFlags, androidVersion) {
   logger.info "Executing NDK build command"
+
+  def out = services.get(StyledTextOutputFactory).create("")
+  out.style(Style.Normal).text("SQLCIPHER_CFLAGS=").style(Style.Info).println("${cflags}")
+  out.style(Style.Normal).text("OPENSSL_DIR=").style(Style.Info).println("${opensslDir}")
+  out.style(Style.Normal).text("SQLCIPHER_DIR=").style(Style.Info).println("${sqlcipherDir}")
+  out.style(Style.Normal).text("SQLCIPHER_OTHER_CFLAGS=").style(Style.Info).println("${otherSqlcipherCFlags}")
+  out.style(Style.Normal).text("ANDROID_NATIVE_ROOT_DIR=").style(Style.Info).println("${androidNativeRootDir}")
+  out.style(Style.Normal).text("NDK_APP_PLATFORM=").style(Style.Info).println("${androidVersion}")
+
   exec {
     def outputDirectory = "NDK_LIBS_OUT=${outputDir}"
     def applicationFile = "NDK_APPLICATION_MK=${applicationMkFile}"
-    def environmentVariables = ["SQLCIPHER_CFLAGS": "${cflags}",
-                                "OPENSSL_DIR": "${opensslDir}",
-                                "SQLCIPHER_DIR": "${sqlcipherDir}",
+    def environmentVariables = ["SQLCIPHER_CFLAGS"       : "${cflags}",
+                                "OPENSSL_DIR"            : "${opensslDir}",
+                                "SQLCIPHER_DIR"          : "${sqlcipherDir}",
                                 "SQLCIPHER_OTHER_CFLAGS" : "${otherSqlcipherCFlags}",
                                 "ANDROID_NATIVE_ROOT_DIR": "${androidNativeRootDir}",
-                                "NDK_APP_PLATFORM": "${androidVersion}"]
+                                "NDK_APP_PLATFORM"       : "${androidVersion}"]
     environment(environmentVariables)
     commandLine "ndk-build", "${ndkBuildType}",
-    "--environment-overrides", outputDirectory,
-    "-C", androidMkDirectory, applicationFile
+      "--environment-overrides", outputDirectory,
+      "-C", androidMkDirectory, applicationFile
   }
 }
