--- a/android-database-sqlcipher/local.properties
+++ b/android-database-sqlcipher/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu May 02 22:55:16 CST 2019
-ndk.dir=D\:\\Android\\sdk\\ndk-bundle
-sdk.dir=D\:\\Android\\sdk
+#Fri Aug 16 17:13:39 CST 2019
+sdk.dir=/home/xiaoke/sdk
